fix Background and foreground colors do not have a sufficient contrast ratio

--- a/themes/ssarcandy/source/css/_partial/article.less
+++ b/themes/ssarcandy/source/css/_partial/article.less
@@ -341,7 +341,7 @@
 
     p code,
     li code {
-        color: @accentColor;
+        color: @darkPrimaryColor;
         line-height: 1;
         margin: 0 4px;
         font-size: 80%;
